<resources>
    <string name="app_name">My Portfolio</string>
    <string name="text_portfolio">My Nanodegree Apps!</string>
    <string name="text_spotify_app">Spotify Streamer</string>
    <string name="text_scores_app">Football Scores App</string>
    <string name="text_library_app">Library App</string>
    <string name="text_build_it_bigger_app">Build it Bigger</string>
    <string name="text_capstone_app">Capstone: My Own App</string>
    <string name="text_xyz_reader_app">XYZ Reader</string>
</resources>
