<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/text_portfolio"
        android:gravity="center"
        android:textSize="@dimen/header_text"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/btnSpotifyApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUdacityOrange"
        android:text="@string/text_spotify_app"/>
    <Button
        android:id="@+id/btnScoresApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUdacityOrange"
        android:text="@string/text_scores_app"/>
    <Button
        android:id="@+id/btnLibraryApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUdacityOrange"
        android:text="@string/text_library_app"/>
    <Button
        android:id="@+id/btnBuildBiggerApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUdacityOrange"
        android:text="@string/text_build_it_bigger_app"/>
    <Button
        android:id="@+id/btnXYZReaderApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorUdacityOrange"
        android:text="@string/text_xyz_reader_app"/>
    <Button
        android:id="@+id/btnCapstoneApp"
        android:layout_marginTop="@dimen/button_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorCapstone"
        android:textColor="@android:color/white"
        android:text="@string/text_capstone_app"/>

</LinearLayout>
